objects/Execution_Steps__c.object
<CustomObject>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Input_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Step_Order__c</fullName>
        <label>Step Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Script_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Name</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipName>Execution_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Login_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Login Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Script Steps</label>
    <nameField>
        <displayFormat>Ex-STP-{00000}</displayFormat>
        <label>Step No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Script Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>